@@ -1,6 +1,6 @@
 {% load wagtailadmin_tags i18n %}
 
-<div class="w-divide-y w-divide-grey-100 w-py-6 w-pl-2 md:w-pl-8">
+<div class="w-divide-y w-divide-grey-100 w-py-6 w-pl-2 lg:w-pl-8">
     {% for template in status_templates %}
         {% include template %}
     {% endfor %}
